# Triangulation

./: README.md
ModelGeneration/: main.ipynb  pyproject.toml
Triangulation/: README.md  Triangulation.sln
Triangulation/Triangulation/: Triangulation.vcxproj  Triangulation.vcxproj.filters
Triangulation/Triangulation/resources/shaders/: model.frag  model.vert
Triangulation/Triangulation/src/: BoundingVolume.cpp  BoundingVolume.h  Memory.h  Objeto.cpp  Objeto.h  Scene.cpp  Scene.h  main.cpp
Triangulation/Triangulation/src/io/: Camera.cpp  Camera.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
